// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/index.tsx should render correct LIST_HEIGHT 0rpx in alipay 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "hello world.",
          "type": "plain-text",
        },
      ],
      "id": 4,
      "props": Object {
        "style": "height:0rpx;",
      },
      "text": undefined,
      "type": "scroll-view",
    },
  ],
  "id": 1,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`src/index.tsx should render correct LIST_HEIGHT 100rpx in alipay 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "text": "hello world.",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "style": "height:100rpx;",
      },
      "text": undefined,
      "type": "scroll-view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;
